# type-tree

./: .travis.yml  ChangeLog.md  README.md  package.yaml  type-tree.cabal
exe/: gencode.hs
src/: CabalTest.hs
src/Language/Haskell/: TypeTree.hs
src/Language/Haskell/TypeTree/: CheatingLift.hs  Datatype.hs  ExampleDatatypes.hs  Leaf.hs
tests/: doctests.hs
